AnimationEditor/css/index.css
#cube-wrapper {
  position: absolute;
  left: 50%;
  top: 50%;
  perspective: 1500px;
}

.cube {
  position: fixed;
  left: 100px;
  transform-style: preserve-3d;
  animation-play-state: paused;
  animation-name: animPlaceHolder;
  /* animation-name: test; */
  animation-duration: 3000ms;
  /* animation-timing-function: linear; */
  animation-iteration-count: infinite;
}

.face {
  position: absolute;
  width: 200px;
  height: 200px;
  border: solid green 3px;
}

#front_face {
  transform: translateX(-100px) translateY(-100px) translateZ(100px);
  background: rgba(255, 0, 0, 0.5);
}

#back_face {
  transform: translateX(-100px) translateY(-100px) translateZ(-100px);
  background: rgba(255, 0, 255, 0.5);
}

#right_face {
  transform: translateY(-100px) rotateY(90deg);
  background: rgba(255, 255, 0, 0.5);
}

#left_face {
  transform: translateY(-100px) translateX(-200px) rotateY(90deg);
  background: rgba(0, 255, 0, 0.5);
}

#top_face {
  transform: translateX(-100px) translateY(-200px) rotateX(90deg);
  background: rgba(0, 255, 255, 0.5);
}

#bottom_face {
  transform: translateX(-100px) rotateX(90deg);
  background: rgba(255, 255, 255, 0.5);
}

.cube {
  transform: rotateX(90deg) rotateY(90deg);
}

.background {
  position: absolute;
  display: flex;
  background-color: rgba(110, 110, 110, 0.644);
  top: 0;
  left: 0;
  z-index: 0;
}

.menu {
  background-color: rgb(240, 239, 239);
  position: absolute;
  top: 0;
  left: 0;
  margin: 100px 15px 0;
  width: 360px;
  max-width: 400px;
  min-height: 900px;
  border-radius: 7px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  text-align: center;
  vertical-align: middle;
  z-index: 99;
}

.options {
  /* background: ivory; */
  margin: 20px auto;
  height: auto;
}

input,
textarea {
  width: 100%;
  display: inline;
}

.inputaxis,
#ft {
  min-width: 40px;
  max-width: 10%;
  text-align: center;
  height: 25px;
  display: inline;
  /* border: none; */
  background-color: transparent;
  transition-duration: 0.4s;
  border-radius: 5px;
  margin: 5px;
}

.inputaxis:hover {
  background-color: white;
}

#playButton {
  border: none;
  border-radius: 50%;
  width: 134px;
  height: 134px;
  transition-duration: 0.4s;
  background-color: lightseagreen;
  color: aliceblue;
  font-size: 25px;
  outline: none;
}
#playButton:hover {
  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
    0 17px 50px 0 rgba(0, 0, 0, 0.19);
}
#playButton span {
  cursor: pointer;
  display: inline-block;
  position: relative;
  transition: 0.5s;
}
#playButton span:after {
  content: "\00bb";
  position: absolute;
  opacity: 0;
  top: 0;
  right: -20px;
  transition: 0.5s;
}
#playButton:hover span {
  padding-right: 25px;
}
#playButton:hover span:after {
  opacity: 1;
  right: 0;
}
#playButton:active {
  /* box-shadow: 0 5px #666; */
  transform: translateY(4px);
}
.playButtonWrapper {
  padding-top: 70px;
  padding-bottom: 40px;
}

.optionsWrapper {
  /* background-color: wheat; */
  /* padding: 0 20px 10px 8%; */
  width: 90%;
  margin: 0 auto;
}

.options .optionTitle {
  background-color: lightblue;
  border-radius: 3px;
  width: 100%;
}

.options {
  padding-bottom: 20px;
  /* border-style: solid; */
  border-radius: 6px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  /* background-color: lightcyan; */
  width: 87%;
  /* background: linear-gradient(
    to bottom,
    rgba(255, 255, 255, 0) 0%,
    rgba(255, 255, 255, 1) 15%,
    rgba(255, 255, 255, 1) 25%,
    rgba(255, 255, 255, 1) 35%,
    rgba(255, 255, 255, 1) 50%,
    rgba(255, 255, 255, 1) 65%,
    rgba(255, 255, 255, 1) 75%,
    rgba(255, 255, 255, 1) 85%,
    rgba(255, 255, 255, 0) 100%
  ); */
}

#isInstant {
  width: fit-content;
}

.optionTitle {
  display: block;
  font-size: large;
}

/* .inputWrapper {
  padding: 5px;

} */

.inputWrapper {
  display: flex;
  margin: 0 auto;
  width: min-content;
  /* background-color: lightblue; */
  align-content: center;
  text-align: center;
  line-height: 35px;
}

.insOptions {
  margin: 0 auto;
  padding-top: 25px;
  padding-bottom: 10px;
}

.insOptions input {
  width: auto;
}

.file-menu-wrapper {
  position: absolute;
  text-align: center;
  z-index: 100;
  top: 30%;
  left: 30%;
  background-color: rgb(30, 187, 179);
  height: 40%;
  width: 40%;
  border-radius: 6px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.file-menu-wrapper .file-menu-header {
  margin-top: 20%;
  text-align: center;
  size: 40px;
  font-size: 50px;
  color: white;
}

#file-input {
  display: none;
}

.custom-file-upload {
  border: 1px solid #ccc;
  display: inline-block;
  padding: 6px 12px;
  cursor: pointer;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border: 2px dashed #bbb;
  text-align: center;
  background-color: #ddd;
  cursor: pointer;
  margin-top: 5%;
  width: fit-content;
  height: 45px;
  font-size: 20px;
}

.custom-file-upload:hover {
  transition-duration: 0.3s;
  background-color: rgb(86, 115, 196);
  color: white;
}

.file-options-wrapper {
  margin: 5%;
  transition-duration: 0.5s;
}

.file-options-button {
  margin: 10px;
  border: 1px solid #ccc;
  display: inline-block;
  padding: 6px 12px;
  cursor: pointer;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border: 1px dashed #bbb;
  text-align: center;
  cursor: pointer;
  width: fit-content;
  height: fit-content;
  font-size: 15px;
}

#upload:hover {
  background-color: rgb(133, 201, 137);
  color: white;
  transition-duration: 0.3s;
}

#abort:hover {
  background-color: rgb(202, 74, 74);
  color: white;
  transition-duration: 0.3s;
}

@keyframes test {
  0% {
    transform: rotateX(0deg) scale3D(1, 1, 1);
  }
  100% {
    transform: rotateX(760deg);
  }
}

